--- a/src/html/car.html
+++ b/src/html/car.html
@@ -21,8 +21,8 @@
 			<div class="container">
 			<span class="gui">贵宾专线：400-400-5678</span>
 				<ul class="wu">
-					<li><a href="#" class="zhuce"><span >注册</span></a></li>
-					<li><a href="#" class="denglu"><span>登录</span></a></li>
+					<li><a href="./reg.html" class="zhuce"><span >注册</span></a></li>
+					<li><a href="./login.html" class="denglu"><span>登录</span></a></li>
 					<li><a href="#" class="gouwu"><i class="iconfont icon-gouwu"></i><span>购物袋</span></a></li>
 					<li><a href="#" class="my05"><span>我的第五大道</span></a></li>
 					<li><a href="#" class="more"><span>更多</span></a></li>
@@ -49,339 +49,20 @@
 			</div>
 		</div>
 	</div>
-	<!-- 导航 -->
-	<div class="nav">
-		<div class="container">
-			<ul class="navlist">
-				<li class="sort"><a href="#" class="a00">商品分类</a>
-				<!-- 商品分类二级菜单 -->
-					<ul class="erji">
-						<li><a href="#"><i class="iconfont icon-jushoucang"></i><span class="y001"></span><span>推荐品牌</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-4"></i><span class="y002"></span><span>箱包</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-icon"></i><span class="y003"></span><span>美妆</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-huanfu"></i><span class="y004"></span><span>服装</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-biao"></i><span class="y005"></span><span>腕表</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-zuanshi-copy"></i><span class="y006"></span><span>配饰</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-nvxie-copy"></i><span class="y007"></span><span>鞋靴</span>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</a></li>
-						<li><a href="#"><i class="iconfont icon-muying"></i><span class="y008"></span><span>母婴</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-jiubei"></i><span class="y009"></span><span>美酒</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-meishi"></i><span class="y010"></span><span>美食</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-jujia"></i><span class="y011"></span><span>家居</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-dianzi"></i><span class="y012"></span><span>电子</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-fuhuaqi"></i><span class="y013"></span><span>办公</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-lipin"></i><span class="y014"></span><span>礼品</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="#"><i class="iconfont icon-haiwai"></i><span class="y015"></span><span>海外馆</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</li>
-				<li><a href="#">首页</a></li>
-				<li><a href="#">最新上架</a></li>
-				<li><a href="#">品牌</a></li>
-				<li><a href="#">女士</a></li>
-				<li><a href="#">男士</a></li>
-				<li><a href="#">腕表</a></li>
-				<li><a href="#">箱包</a></li>
-				<li><a href="#">美妆</a></li>
-				<li><a href="#">生活馆</a></li>
-				<li><a href="#">海外馆</a></li>
-				<li><a href="#">特惠</a></li>
-				<li><a href="#">时尚</a></li>
-				<li><a href="#">名品闪购</a></li>
-				<li><a href="#">礼品区</a></li>
-			</ul>
-		</div>
-	</div>
+
 	<!-- 添加内容 -->
 	<div class="car_top">
-		.con
+		<div class="container">
+				<ul class="car_y">
+					<li><a href="#"><i class="iconfont icon-cart"></i> 购物车</a></li>
+					<li><a href="#"><i class="iconfont icon-edit"></i> 填写核对订单</a></li>
+					<li><a href="#"><i class="iconfont icon-dollar"></i> 付款</a></li>
+					<li><a href="#"><i class="iconfont icon-assessedbadge"></i> 订单支付成功</a></li>
+				</ul>
+		</div>
 	</div>
 	
 		
-	</div>
 
 	<!-- 最后 -->
 	<div class="footer">
