--- a/src/html/goods.html
+++ b/src/html/goods.html
@@ -23,8 +23,8 @@
 			<div class="container">
 			<span class="gui">贵宾专线：400-400-5678</span>
 				<ul class="wu">
-					<li><a href="#" class="zhuce"><span >注册</span></a></li>
-					<li><a href="#" class="denglu"><span>登录</span></a></li>
+					<li><a href="./reg.html" class="zhuce"><span >注册</span></a></li>
+					<li><a href="./login.html" class="denglu"><span>登录</span></a></li>
 					<li><a href="#" class="gouwu"><i class="iconfont icon-gouwu"></i><span>购物袋</span></a></li>
 					<li><a href="#" class="my05"><span>我的第五大道</span></a></li>
 					<li><a href="#" class="more"><span>更多</span></a></li>
@@ -428,7 +428,7 @@
 						<p>配货时间：5-15天</p>
 					</div>
 					<div class="liji">
-						<span><a href="#">立即购买</a></span>
+						<span><a href="./car.html">立即购买</a></span>
 						<span><a href="#"><i class="iconfont icon-gouwu"></i>加入购物车</a></span>
 						<span><a href="#"><i class="iconfont icon-jushoucang"></i>加入收藏</a></span>
 					</div>
