--- a/src/html/page.html
+++ b/src/html/page.html
@@ -2,19 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>第五大道首页</title>
+	<title>列表页</title>
 	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/home.css">
-
-	<!-- 轮播图插件 -->
-	<link rel="stylesheet" href="lib/jquery.Carousel/jquery.Carousel.css">
-	<!-- <script src="lib/jquery.lxCarousel/jquery.lxCarousel.js"></script> -->
-	
+	<link rel="stylesheet" href="css/page.css">
 	<!-- require模块化 -->
-	<script src="js/require.js" data-main="js/home"></script>
-	<script>
-	
-	</script>
+	<script src="js/require.js" data-main="js/page"></script>
 </head>
 <body>
 <!-- 整页 -->
@@ -27,8 +19,8 @@
 			<div class="container">
 			<span class="gui">贵宾专线：400-400-5678</span>
 				<ul class="wu">
-					<li><a href="#" class="zhuce"><span >注册</span></a></li>
-					<li><a href="#" class="denglu"><span>登录</span></a></li>
+					<li><a href="./reg.html" class="zhuce"><span >注册</span></a></li>
+					<li><a href="./login.html" class="denglu"><span>登录</span></a></li>
 					<li><a href="#" class="gouwu"><i class="iconfont icon-gouwu"></i><span>购物袋</span></a></li>
 					<li><a href="#" class="my05"><span>我的第五大道</span></a></li>
 					<li><a href="#" class="more"><span>更多</span></a></li>
