--- a/src/html/car.html
+++ b/src/html/car.html
@@ -61,8 +61,121 @@
 				</ul>
 		</div>
 	</div>
-	
-		
+	<!-- 全选 -->
+	<div class="car_goods">
+		<div class="container">
+			<table class="datalist">
+				<tr class="shang">
+					<td><input type="checkbox">全选</td>
+					<td>商品图片</td>
+					<td>商品名称</td>
+					<td>商品属性</td>
+					<td>购物价</td>
+					<td>购买数量</td>
+					<td>活动信息</td>
+					<td>小计</td>
+					<td>操作</td>
+				</tr>
+				<tr class="xia">
+					<td><input type="checkbox"></td>
+					<td class="img00"></td>
+					<td>Hermes 爱马仕 birkin铂金包</td>
+					<td>白色系</td>
+					<td>158000.00</td>
+					<td>
+						<button>-</button>
+						<input type="text" value="2">	
+						<button>+</button>
+					</td>
+					<td>活动信息</td>
+					<td>158000</td>
+					<td><a href="#">删除</a></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<!-- 清空 -->
+	<div class="qing">
+		<div class="container">
+			<span><a href="#">清空购物车</a></span>
+			<span>数量：</span>
+			<span class="shuliang">1件</span>
+			<span class="jin_e">商品总金额：</span>
+			<span class="zonge"> ￥158000</span>
+		</div>
+	</div>
+	<!-- 继续 -->
+	<div class="jixu">
+		<div class="container">
+			<span><a href="../index.html">< < 继续购物</a></span>
+			<span><a href="#">点击结算</a></span>
+		</div>
+	</div>
+	<!-- SALE -->
+	<div class="sale">
+		<div class="container">
+			<div class="nei">
+				<div class="nei_01">
+					<span class="ss00">SALE</span>
+					<span class="ss01">99元换购</span>
+				</div>
+				<div class="nei_02">
+					<div class="tu00"></div>
+					<div class="tu01">
+						<p>Medspa 美帕</p>
+						<p>护肤大礼包</p>
+						<p>第五大道价：￥299.00</p>
+						<p>换购价：<span>￥99.00</span></p>
+						<p><a href="#" class="jia00">加入购物车</a></p>
+					</div>
+				</div>				
+			</div>
+
+		</div>
+	</div>
+	<div class="cai">
+		<div class="container">
+			<div class="con_t">
+				<span><a href="#">猜您喜欢</a></span>
+			</div>
+			<!-- 1 -->
+				<div class="goods_mo">
+					<div class="g_m"><a href="#"></a></div>
+					<div class="g_b">
+						<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+						</p>
+					</div>
+				</div>
+				<div class="goods_mo">
+					<div class="g_m"><a href="#"></a></div>
+					<div class="g_b">
+						<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+						</p>
+					</div>
+				</div>
+				<div class="goods_mo">
+					<div class="g_m"><a href="#"></a></div>
+					<div class="g_b">
+						<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+						</p>
+					</div>
+				</div>
+				<div class="goods_mo">
+					<div class="g_m"><a href="#"></a></div>
+					<div class="g_b">
+						<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+						</p>
+					</div>
+				</div>
+				<div class="goods_mo">
+					<div class="g_m"><a href="#"></a></div>
+					<div class="g_b">
+						<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+						</p>
+					</div>
+				</div>
+		</div>		
+	</div>
 
 	<!-- 最后 -->
 	<div class="footer">
@@ -141,7 +254,6 @@
 			360网站安全检测平台</span>
 		</div>
 	</div>
-	
 	
 	<div class="datas">
 		<p></p>
