--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -33,8 +33,8 @@
 				<span>使用手机注册</span>
 				</p>
 
-		        <p class="input"><label for="username">您的邮箱：</label>
-		        <input type="text" name="username" id="username" placeholder="...@.com">
+		        <p class="input"><label for="username"> 用户名： </label>
+		        <input type="text" name="username" id="username" placeholder="6-12位用户名">
 		        <!-- <button class="y_mail">验证邮箱</button> -->
 		        </p>
 		        <p class="input"><label for="passowrd">密码：</label>
@@ -48,8 +48,8 @@
 		        	<a href="#">《第五大道商城服务条款》</a>
 		        </p>
 
-		        <p><button type="submit">注册</button></p>
-		        <p>已有帐号？<a href="#">立即登录</a></p>
+		        <p><button type="submit" id="btnReg"><a href="reg_suc.html">注册</a></button></p>
+		        <p>已有帐号？<a href="../html/login.html">立即登录</a></p>
 
 		        <p>立即注册免费获得<a href="#">1000</a>积分<a href="#">+100</a>元优惠券</p>
 		    </form>
