--- a/src/html/page.html
+++ b/src/html/page.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>5列表页</title>
+	<title>列表页</title>
 	<link rel="stylesheet" href="../css/page.css">
 </head>
 <body>
-	<!-- <h1>5列表页</h1> -->
 	<div id="datalist">
-		<!-- <img src="../img/gg00.png" alt=""> -->
 	</div>
 	<div id="page"></div>
 	<script src="../js/page.js"></script>
