--- a/src/html/page2.html
+++ b/src/html/page2.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>列表页</title>
-	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/page.css">
+	<link rel="stylesheet" href="../css/base.css">
+	<link rel="stylesheet" href="../css/page2.css">
 	<!-- require模块化 -->
-	<script src="js/require.js" data-main="js/page"></script>
+	<script src="../js/require.js" data-main="../js/page2"></script>
+
 </head>
 <body>
 <!-- 整页 -->
@@ -47,7 +48,7 @@
 			</div>
 		</div>
 	</div>
-
+	
 	<!-- 导航 -->
 	<div class="nav">
 		<div class="container">
@@ -374,344 +375,18 @@
 			</ul>
 		</div>
 	</div>
-
-	<!-- 轮播图 -->
-	<div class="banner">
+	
+	<!-- 商品列表 -->
+	<div class="page">
 		<div class="container">
-			<!-- 轮播图插件 -->
-			<div class="lbt"></div>
-		</div>
-	</div>
-
-	<!-- 热点活动 -->
-	<div class="popular">
-		<div class="container">
-			<div class="pop_head">
-				<a href="#"></a>
+			<div id="datalist">
 			</div>
-			<div class="pop_main">
-				<span><a href="#"></a></span>
-				<span><a href="#"></a></span>
-				<span><a href="#"></a></span>
-			</div>
+			<div id="page"></div>
 		</div>
 	</div>
 	
-	<!-- 热门推荐 -->
-	<div class="classic">
-		<div class="container">
-			<div class="clc_head">
-				<a href="#"></a>
-			</div>
-			<div class="clc_main">
-				<span><a href="#"></a></span>
-				<span><a href="#"></a></span>
-				<span><a href="#"></a></span>
-				<span><a href="#"></a></span>
-			</div>
-		</div>
-	</div>
 
-	<!-- 热卖推荐 -->
-	<div class="top">
-		<div class="container">
-			<div class="top_head">
-				<a href="#"></a>
-			</div>
-			<!-- tab切换 -->
-			<div class="top_main">
-				<ul class="top_btn">
-					<li>最新上架</li>
-					<li>热销单品</li>
-					<li>明星同款</li>
-					<li>海外馆</li>
-					<li>清仓特卖</li>
-				</ul>
-				<div class="good_01">
-					<div>
-					<a href="#"></a>
-					<p class="p1">女士红色斜跨小包 A000111</p>
-					<p class="p2">￥20950.00</p>
-					</div>
-					<div>
-					<a href="#"></a>
-					<p class="p3">Birkin铂金包30奶昔白 B320043</p>
-					<p class="p4">￥695350.00</p>
-					</div>
-					<div>
-					<a href="#"></a>
-					<p class="p5">女士深灰色圆头高跟皮鞋 TS34344</p>
-					<p class="p6">￥356950.00</p>
-					</div>
-					<div>
-					<a href="#"></a>
-					<p class="p7">SPEEDY 30 RAMAGES 花色Mono</p>
-					<p class="p8">￥2350.00</p>
-					</div>
-					<div>
-					<a href="#"></a>
-					<p class="p9">Return to Tiffany系列 纯银心</p>
-					<p class="p0">￥32450.00</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<!-- 品牌推荐 -->
-	<div class="favorite">
-		<div class="container">
-			<div class="fav_head">
-				<a href="#"></a>
-				<span><a href="#">全部品牌 >></a></span>
-			</div>
-			<div class="fav_main">
-				<!-- 下方大图 -->
-				<div class="fav_top">
-					<span><a href="#"></a></span>
-					<span><a href="#"></a></span>
-					<span><a href="#"></a></span>
-					<span><a href="#"></a></span>
-					<span><a href="#"></a></span>
-				</div>
-				<!-- 下方小图 -->
-				<div class="fav_but">
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-					<div class="f01"><a href="#"></a></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- 三张相同图 -->
-	<div class="three">
-		<!-- 1、经典包款 -->
-		<div class="handbags">
-			<div class="bags_t">
-				<p><a href="#"></a></p>
-				<p>
-				<span><a href="#">Prada</a></span>
-				<span><a href="#">Celine</a></span>
-				<span><a href="#">Gucci</a></span>
-				<span><a href="#">Dior</a></span>
-				<span><a href="#">Louis VuittonVLV</a></span>
-				<span><a href="#">更多 >></a></span>
-				</p>
-			</div>
-			<div class="bags_m">
-				<p><a href="#"></a></p>
-				<p><a href="#"></a></p>
-				<p><a href="#"></a></p>
-			</div>
-			<div class="bags_b">
-					<a href="#" class="bb_1">
-						<p></p>
-						<p>Loewe罗威</p>
-						<p>￥6890.00 </p>
-					</a>
-					<a href="#" class="bb_2">
-						<p></p>
-						<p>Hermes爱马仕</p>
-						<p>￥16890.00 </p>
-					</a>
-					<a href="#" class="bb_3">
-						<p></p>
-						<p>Moschine莫斯奇诺</p>
-						<p>￥26890.00 </p>
-					</a>
-					<a href="#" class="bb_4">
-						<p></p>
-						<p>Hermes爱马仕</p>
-						<p>￥36890.00 </p>
-					</a>
-					<a href="#" class="bb_5">
-						<p></p>
-						<p>Louis Vuitton/LV路易.威登</p>
-						<p>￥46890.00 </p>
-					</a>
-			</div>
-		</div>
-		<!-- 2、经典腕表 -->
-		<div class="watches">
-			<div class="bags_t">
-				<p><a href="#"></a></p>
-				
-				<p>
-				<span><a href="#">Armani</a></span>
-				<span><a href="#">IWC</a></span>
-				<span><a href="#">Tissot</a></span>
-				<span><a href="#">Longines</a></span>
-				<span><a href="#">Rolex</a></span>
-				<span><a href="#">更多 >></a></span>
-				</p>
-			</div>
-			<div class="bags_m">
-				<p><a href="#"></a></p>
-				<p><a href="#"></a></p>
-				<p><a href="#"></a></p>
-			</div>
-			<div class="bags_b">
-					<a href="#" class="bb_1">
-						<p></p>
-						<p>Loewe罗威</p>
-						<p>￥6890.00 </p>
-					</a>
-					<a href="#" class="bb_2">
-						<p></p>
-						<p>Hermes爱马仕</p>
-						<p>￥16890.00 </p>
-					</a>
-					<a href="#" class="bb_3">
-						<p></p>
-						<p>Moschine莫斯奇诺</p>
-						<p>￥26890.00 </p>
-					</a>
-					<a href="#" class="bb_4">
-						<p></p>
-						<p>Hermes爱马仕</p>
-						<p>￥36890.00 </p>
-					</a>
-					<a href="#" class="bb_5">
-						<p></p>
-						<p>Louis Vuitton/LV路易.威登</p>
-						<p>￥46890.00 </p>
-					</a>
-			</div>
-		</div>
-		<!-- 3、美颜妆品 -->
-		<div class="cosmetics">
-			<div class="bags_t">
-				<p><a href="#"></a></p>
-				
-				<p>
-				<span><a href="#">Chanel</a></span>
-				<span><a href="#">Lancome</a></span>
-				<span><a href="#">La MER</a></span>
-				<span><a href="#">Dior</a></span>
-				<span><a href="#">Estee Lauder</a></span>
-				<span><a href="#">更多 >></a></span>
-				</p>
-			</div>
-			<div class="bags_m">
-				<p><a href="#"></a></p>
-				<p><a href="#"></a></p>
-				<p><a href="#"></a></p>
-			</div>
-			<div class="bags_b">
-					<a href="#" class="bb_1">
-						<p></p>
-						<p>Loewe罗威</p>
-						<p>￥6890.00 </p>
-					</a>
-					<a href="#" class="bb_2">
-						<p></p>
-						<p>Hermes爱马仕</p>
-						<p>￥16890.00 </p>
-					</a>
-					<a href="#" class="bb_3">
-						<p></p>
-						<p>Moschine莫斯奇诺</p>
-						<p>￥26890.00 </p>
-					</a>
-					<a href="#" class="bb_4">
-						<p></p>
-						<p>Hermes爱马仕</p>
-						<p>￥36890.00 </p>
-					</a>
-					<a href="#" class="bb_5">
-						<p></p>
-						<p>Louis Vuitton/LV路易.威登</p>
-						<p>￥46890.00 </p>
-					</a>
-			</div>
-		</div>
-	</div>
-	<!-- 黑banner -->
-	<div class="banner_b">
-		<div class="container">
-			
-		</div>
-	</div>
 
-	<!-- 打折 -->
-	<div class="discount">
-		<div class="container">
-			<div class="baby_1">
-				<a href="#">
-					<p></p>
-					<p>宝宝服饰专场 欧洲一线品牌</p>
-					<p class="baby_time">
-					<span></span>
-					<span>8天10小时44分钟结束</span>
-					<span></span>
-					</p>
-				</a>
-			</div>
-			<div class="baby_2">
-				<a href="#">
-					<p></p>
-					<p>经典男装专场 欧洲一线品牌</p>
-					<p class="baby_time">
-					<span></span>
-					<span>3天09小时03分钟结束</span>
-					<span></span>
-					</p>
-				</a>
-			</div>
-			<div class="baby_3">
-				<a href="#">
-					<p></p>
-					<p>时尚女装专场 欧洲一线品牌</p>
-					<p class="baby_time">
-					<span></span>
-					<span>1天13小时04分钟结束</span>
-					<span></span>
-					</p>
-				</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- 优惠活动 -->
-	<div class="promotion">
-		<div class="container">
-			<div class="pro_t">
-			</div>
-			<div class="pro_nei">
-				<a href="#" class="pro_01"></a>
-				<a href="#" class="pro_02"></a>
-				<a href="#" class="pro_03"></a>
-				<a href="#" class="pro_04"></a>
-				<a href="#" class="pro_05"></a>
-				<a href="#" class="pro_06"></a>
-				<!-- pay -->
-				<div class="pay">
-					<a href="#" class="pro_07"></a>
-					<a href="#" class="pro_08"></a>
-					<a href="#" class="pro_09"></a>
-					<a href="#" class="pro_10"></a>
-					<a href="#" class="pro_11"></a>
-					<a href="#" class="pro_12"></a>
-				</div>
-				<a href="#" class="pro_13"></a>
-			</div>
-		</div>
-	</div>
 	<!-- 最后 -->
 	<div class="footer">
 		<div class="f_t">
@@ -793,11 +468,7 @@
 	
 	<div class="datas">
 		<p></p>
-
 	</div>
-	<!-- 左下广告 -->
-	<!-- <div class="ad"><a href="#" class="ad_lbt"></a>
-	</div> -->
 
 	<!-- 右固定 -->
 	<div class="ad_r">
@@ -841,9 +512,8 @@
 
 	</div>
 
-
 </div>
 
-
+<script src="../js/page.js"></script>	
 </body>
 </html>
