--- a/src/index.html
+++ b/src/index.html
@@ -54,70 +54,50 @@
 	<div class="nav">
 		<div class="container">
 			<ul class="navlist">
-				<li class="sort"><a href="html/goods.html" class="a00">商品分类</a>
+				<li class="sort"><a href="html/page2.html" class="a00">商品分类</a>
 				<!-- 商品分类二级菜单 -->
 					<ul class="erji">
 						<li><a href="#"><i class="iconfont icon-jushoucang"></i><span class="y001"></span><span>推荐品牌</span></a>
 							<!-- 三级 -->
 							<div class="y001s1">
 								<div class="ws01">
-									<a href="html/goods.html">高端品牌</a>
+									<a href="html/page2.html">高端品牌</a>
 									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
 								</div>
 								<div class="ws02">
-									<a href="html/goods.html">热销品牌</a>
+									<a href="html/page2.html">热销品牌</a>
 									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
 								</div>
 								<div class="ws03">
-									<a href="html/goods.html">热销品牌</a>
+									<a href="html/page2.html">热销品牌</a>
 									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
 								</div>
 								<div class="hong">
-									<a href="html/goods.html">进入所有品牌</a>
+									<a href="html/page2.html">进入所有品牌</a>
 								</div>
 							</div>
 						</li>
-						<li><a href="html/goods.html"><i class="iconfont icon-4"></i><span class="y002"></span><span>箱包</span></a>
+						<li><a href="html/page2.html"><i class="iconfont icon-4"></i><span class="y002"></span><span>箱包</span></a>
 							<!-- 三级 -->
 							<div class="y001s1">
 								<div class="ws01">
-									<a href="html/goods.html">高端品牌</a>
+									<a href="html/page2.html">高端品牌</a>
 									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
 								</div>
 								<div class="ws02">
-									<a href="html/goods.html">热销品牌</a>
+									<a href="html/page2.html">热销品牌</a>
 									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
 								</div>
 								<div class="ws03">
-									<a href="html/goods.html">热销品牌</a>
+									<a href="html/page2.html">热销品牌</a>
 									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
 								</div>
 								<div class="hong">
-									<a href="html/goods.html">进入所有品牌</a>
+									<a href="html/page2.html">进入所有品牌</a>
 								</div>
 							</div>
 						</li>
-						<li><a href="html/goods.html"><i class="iconfont icon-icon"></i><span class="y003"></span><span>美妆</span></a>
-							<!-- 三级 -->
-							<div class="y001s1">
-								<div class="ws01">
-									<a href="#">高端品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws02">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="ws03">
-									<a href="#">热销品牌</a>
-									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
-								</div>
-								<div class="hong">
-									<a href="#">进入所有品牌</a>
-								</div>
-							</div>
-						</li>
-						<li><a href="html/goods.html"><i class="iconfont icon-huanfu"></i><span class="y004"></span><span>服装</span></a>
+						<li><a href="html/page2.html"><i class="iconfont icon-icon"></i><span class="y003"></span><span>美妆</span></a>
 							<!-- 三级 -->
 							<div class="y001s1">
 								<div class="ws01">
@@ -137,7 +117,7 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="html/goods.html"><i class="iconfont icon-biao"></i><span class="y005"></span><span>腕表</span></a>
+						<li><a href="html/page2.html"><i class="iconfont icon-huanfu"></i><span class="y004"></span><span>服装</span></a>
 							<!-- 三级 -->
 							<div class="y001s1">
 								<div class="ws01">
@@ -157,7 +137,27 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="html/goods.html"><i class="iconfont icon-zuanshi-copy"></i><span class="y006"></span><span>配饰</span></a>
+						<li><a href="html/page2.html"><i class="iconfont icon-biao"></i><span class="y005"></span><span>腕表</span></a>
+							<!-- 三级 -->
+							<div class="y001s1">
+								<div class="ws01">
+									<a href="#">高端品牌</a>
+									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
+								</div>
+								<div class="ws02">
+									<a href="#">热销品牌</a>
+									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
+								</div>
+								<div class="ws03">
+									<a href="#">热销品牌</a>
+									<span>Louis Vuitton/LV Chaanel Padf Ferdr Hernamer Opdferc Louis Vuitton/LV Chaanel Padf Fdf Hernamer Opdferc Louis</span>
+								</div>
+								<div class="hong">
+									<a href="#">进入所有品牌</a>
+								</div>
+							</div>
+						</li>
+						<li><a href="html/page2.html"><i class="iconfont icon-zuanshi-copy"></i><span class="y006"></span><span>配饰</span></a>
 							<!-- 三级 -->
 							<div class="y001s1">
 								<div class="ws01">
@@ -359,20 +359,20 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="html/goods.html">首页</a></li>
-				<li><a href="html/goods.html">最新上架</a></li>
-				<li><a href="html/goods.html">品牌</a></li>
-				<li><a href="html/goods.html">女士</a></li>
-				<li><a href="html/goods.html">男士</a></li>
-				<li><a href="html/goods.html">腕表</a></li>
-				<li><a href="html/goods.html">箱包</a></li>
-				<li><a href="html/goods.html">美妆</a></li>
-				<li><a href="html/goods.html">生活馆</a></li>
-				<li><a href="html/goods.html">海外馆</a></li>
-				<li><a href="html/goods.html">特惠</a></li>
-				<li><a href="html/goods.html">时尚</a></li>
-				<li><a href="html/goods.html">名品闪购</a></li>
-				<li><a href="html/goods.html">礼品区</a></li>
+				<li><a href="html/page2.html">首页</a></li>
+				<li><a href="html/page2.html">最新上架</a></li>
+				<li><a href="html/page2.html">品牌</a></li>
+				<li><a href="html/page2.html">女士</a></li>
+				<li><a href="html/page2.html">男士</a></li>
+				<li><a href="html/page2.html">腕表</a></li>
+				<li><a href="html/page2.html">箱包</a></li>
+				<li><a href="html/page2.html">美妆</a></li>
+				<li><a href="html/page2.html">生活馆</a></li>
+				<li><a href="html/page2.html">海外馆</a></li>
+				<li><a href="html/page2.html">特惠</a></li>
+				<li><a href="html/page2.html">时尚</a></li>
+				<li><a href="html/page2.html">名品闪购</a></li>
+				<li><a href="html/page2.html">礼品区</a></li>
 			</ul>
 		</div>
 	</div>
