--- a/src/html/page2.html
+++ b/src/html/page2.html
@@ -379,9 +379,12 @@
 	<!-- 商品列表 -->
 	<div class="page">
 		<div class="container">
+			<!-- 分页 -->
 			<div id="datalist">
 			</div>
 			<div id="page"></div>
+			<!-- 懒加载 -->
+			<!-- <div class="datalist"></div> -->
 		</div>
 	</div>
 	
@@ -513,7 +516,7 @@
 	</div>
 
 </div>
-
+<!-- 分页 -->
 <script src="../js/page.js"></script>	
 </body>
 </html>
