--- a/src/html/msg.html
+++ b/src/html/msg.html
@@ -388,31 +388,31 @@
 			<div class="mid_m">
 				<div class="mm_z">
 					<div class="dingdan">
-						<p class="ding00"><a href="#">订单中心</a></p>
+						<p class="ding00"><a href="#"> 订单中心</a></p>
 
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>我的订单</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>已购商品</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>我的评论</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>我的收藏</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>我的退换货</a></p>
+						<p><a href="#"><i class="iconfont icon-form"></i> 我的订单</a></p>
+						<p><a href="#"><i class="iconfont icon-cart"></i> 已购商品</a></p>
+						<p><a href="#"><i class="iconfont icon-edit"></i> 我的评论</a></p>
+						<p><a href="#"><i class="iconfont icon-discount"></i> 我的收藏</a></p>
+						<p><a href="#"><i class="iconfont icon-process"></i> 我的退换货</a></p>
 					</div>
 					<div class="dingdan">
-						<p class="ding00"><a href="#">我的账户</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>个人信息</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>收货地址</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>修改密码</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>账户安全</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>我的礼券</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>我的礼品卡</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>账户余额</a></p>
+						<p class="ding00"><a href="#"> 我的账户</a></p>
+						<p><a href="#"><i class="iconfont icon-shezhi"></i> 个人信息</a></p>
+						<p><a href="#"><i class="iconfont icon-haiwai"></i> 收货地址</a></p>
+						<p><a href="#"><i class="iconfont icon-link"></i> 修改密码</a></p>
+						<p><a href="#"><i class="iconfont icon-password"></i> 账户安全</a></p>
+						<p><a href="#"><i class="iconfont icon-folder"></i> 我的礼券</a></p>
+						<p><a href="#"><i class="iconfont icon-signboard"></i> 我的礼品卡</a></p>
+						<p><a href="#"><i class="iconfont icon-dollar"></i> 账户余额</a></p>
 					</div>
 					<div class="dingdan">
-						<p class="ding00"><a href="#">会员中心</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>我的积分</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>积分兑换</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>会员等级</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>年底返现</a></p>
-						<p><a href="#"><i class="iconfont icon-gouwu"></i>邀请好友</a></p>
+						<p class="ding00"><a href="#"> 会员中心</a></p>
+						<p><a href="#"><i class="iconfont icon-viewgallery"></i> 我的积分</a></p>
+						<p><a href="#"><i class="iconfont icon-gifts"></i> 积分兑换</a></p>
+						<p><a href="#"><i class="iconfont icon-manageorder"></i> 会员等级</a></p>
+						<p><a href="#"><i class="iconfont icon-dollar"></i> 年底返现</a></p>
+						<p><a href="#"><i class="iconfont icon-trust"></i> 邀请好友</a></p>
 					</div>
 				</div>
 				<div class="mm_y">
